--- a/recipes/falafel.html
+++ b/recipes/falafel.html
@@ -7,6 +7,8 @@
 </head>
 <body>
     <h1>Falafel</h1>
+    <img src="./PictureTheRecipe-Falafel.webp" alt="falafel picture">
+    <p>Vegan's delight, a crispy and fluffy fritter enjoyed all over the Levant. This recipe aims to get you the lighter texture of the Palestinian falafel, but will also include how to get the crunchier Israeli falafel. Think of this as a set of guidelines, a good jumping off point, for creating your own falafel. You can experiment with different beans, different seasonings & flavorings. The bean is yours to fry however you desire.</p>
     <h3>Ingredients</h3>
     <ul id="ingredients">
         <li>1 lbs hulled & split fava beans. Alternative: small lima beans</li>
