added more recipes and pictures

--- a/recipes/pickledOnions.html
+++ b/recipes/pickledOnions.html
@@ -6,6 +6,21 @@
     <title>Pickled Onions</title>
 </head>
 <body>
-    <h1>Pickled Onion recipe here</h1>
+    <h1>Pickled Red Onions</h1>
+    <img src="pickled-red-onions-1500-12.webp" alt="jar of pickled onions">
+    <p>Easiest condiment in the world. You should always keep these in your fridge</p>
+    
+    <div id="ingredients">
+    <h3>Ingredients</h3>
+    <ul>
+        <li>1 approximately 13oz bottle Seasoned Rice Wine Vinegar</li>
+        <li>1 large red onion, julienned</li>
+        <li>1 Tbs salt</li>
+    </ul>
+    </div>
+    <h3>Method</h3>
+    <div id="method">
+        <p>In a non reactive bowl or jar, combine all ingredients. Don't worry about dissolving the salt as it will happen as the onions leech out their water. Let sit in the fridge at least 24 hours. Keeps for a month in the fridge.</p>
+    </div>
 </body>
 </html>
