--- a/recipes/tahina.html
+++ b/recipes/tahina.html
@@ -6,6 +6,28 @@
     <title>Tahina</title>
 </head>
 <body>
-    <h1>Tahina recipe here</h1>
+    <h1>Tahina</h1>
+    <img src="tahini.webp" alt="tahina paste">
+    <p>Sesame paste based sauce with lemon, garlic, and cumin. Great on salads and sandwiches, or served with veggie sticks or <a href="./falafel.html">falafel</a> for dipping.
+    </p>
+
+    <div id="ingredients">
+        <ul id="ingredients">
+            <li>4 cloves garlic</li>
+            <li>1 cup tahini</li>
+            <li>2/3 cup lemon juice</li>
+            <li>1/2 tsp cumin or more to taste</li>
+            <li>Salt to taste</li>
+            <li>Water to desired thinness</li>
+        </ul>
+    </div>
+
+    <div id="method">
+        <ol>
+            <li>Grate garlic or smash into a paste with a garlic press</li>
+            <li>Mix together tahini, lemon juice and cumin. This will initially thicken the tahini and you'll think you're doing something wrong</li>
+            <li>Continue adding water and mixing until homogenous until the desired consistency is achieved. The add salt to taste</li>
+        </ol>
+    </div>
 </body>
 </html>
