--- a/recipes/toum.html
+++ b/recipes/toum.html
@@ -6,6 +6,30 @@
     <title>Toum</title>
 </head>
 <body>
-    <h1>Toum recipe here</h1>
+    <h1>Toum</h1>
+    <img src="toum.webp" alt="picture of toum">
+    <div id="description">
+        <p>
+            Shockingly simple, delicious Lebanese garlic sauce. We're opting to make a vegan variety using aquafaba (the water from a can of chickpeas) but you can also substitute an eggwhite. This is not a traditional recipe, but I find this makes the recipe more approachable and less error prone. Since this is primarily a garlic sauce, you should start with the highest quality garlic you can find. If you're buying from the supermarket, look for garlic bulbs that are relatively heavy for their size. I also need to specify here <strong>do not use extra virgin olive oil here</strong> since it will give your toum an incredibly bitter flavor. If you're avoiding most neutral flavored oils (aka "seed oils") I'd opt instead to use a refined olive oil or avocado oil. It's the perfect sauce to add to your kebab, shawarma, or <a href="./falafel.html">falafel</a> 
+        </p>
+    </div>
+
+<h3>Ingredients</h3>
+    <div id="ingredients">
+        <ul id="ingredients">
+            <li>1/2 cup of garlic, about 12 cloves (I did say this was a garlic sauce right?</li>
+            <li>1/4 cup aquafaba or 1 egg white</li>
+            <li>3 Tbs lemon juice</li>
+            <li>1.5 tsp coarse kosher salt</li>
+            <li>2 cups neutral flavored oil</li>
+        </ul>
+    </div>
+    <div id="method">
+        <h3>Method</h3>
+        <ol><li>Begin by putting all of your garlic and salt into the food processor. Blitz to a fine paste, scraping the sides as necessary</li>
+        <li>Once your paste is formed, add to it your aquafaba and lemon juice.Process until a homogenous liquid, with slight foam.</li>
+        <li>With the food processor running, slowly stream in your oil. It will start seeming too thin at first, but as you add more oil the mixture will thicken. The end result will be a garlicy, fluffy sauce.</li>
+        </ol>
+    </div>
 </body>
 </html>
